--- a/LowPoly/app/src/main/AndroidManifest.xml
+++ b/LowPoly/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
             android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
